--- a/internal/projects/wood/Stamped/BookDetailViewController.xib
+++ b/internal/projects/wood/Stamped/BookDetailViewController.xib
@@ -42,19 +42,34 @@
 				<int key="NSvFlags">274</int>
 				<object class="NSMutableArray" key="NSSubviews">
 					<bool key="EncodedWithXMLCoder">YES</bool>
-					<object class="IBUIScrollView" id="992991097">
+					<object class="IBUIScrollView" id="450302710">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">274</int>
 						<object class="NSMutableArray" key="NSSubviews">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<object class="IBUILabel" id="1066950092">
-								<reference key="NSNextResponder" ref="992991097"/>
+							<object class="IBUIImageView" id="177378919">
+								<reference key="NSNextResponder" ref="450302710"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{0, 42}, {320, 370}}</string>
+								<reference key="NSSuperview" ref="450302710"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView"/>
+								<int key="IBUIContentMode">1</int>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<object class="NSCustomResource" key="IBUIImage">
+									<string key="NSClassName">NSImage</string>
+									<string key="NSResourceName">book_detail_fillter@2x.png</string>
+								</object>
+							</object>
+							<object class="IBUILabel" id="593377226">
+								<reference key="NSNextResponder" ref="450302710"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{15, 10}, {233, 36}}</string>
-								<reference key="NSSuperview" ref="992991097"/>
+								<reference key="NSSuperview" ref="450302710"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="892193594"/>
-								<object class="NSColor" key="IBUIBackgroundColor" id="484526791">
+								<reference key="NSNextKeyView" ref="434235307"/>
+								<object class="NSColor" key="IBUIBackgroundColor" id="202863586">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MCAwAA</bytes>
 								</object>
@@ -64,7 +79,7 @@
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<string key="IBUIText">Freedom</string>
-								<object class="NSColor" key="IBUITextColor" id="980952085">
+								<object class="NSColor" key="IBUITextColor" id="789455270">
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MCAwIDAAA</bytes>
 								</object>
@@ -83,20 +98,21 @@
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
-							<object class="IBUILabel" id="47430274">
-								<reference key="NSNextResponder" ref="992991097"/>
+							<object class="IBUILabel" id="742741641">
+								<reference key="NSNextResponder" ref="450302710"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{15, 38}, {200, 21}}</string>
-								<reference key="NSSuperview" ref="992991097"/>
+								<reference key="NSSuperview" ref="450302710"/>
 								<reference key="NSWindow"/>
-								<reference key="IBUIBackgroundColor" ref="484526791"/>
+								<reference key="NSNextKeyView" ref="259745252"/>
+								<reference key="IBUIBackgroundColor" ref="202863586"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<int key="IBUIContentMode">7</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<string key="IBUIText">by The Creator of Things</string>
-								<reference key="IBUITextColor" ref="980952085"/>
+								<reference key="IBUITextColor" ref="789455270"/>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">1</int>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
@@ -113,28 +129,28 @@
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
-							<object class="IBUIImageView" id="892193594">
-								<reference key="NSNextResponder" ref="992991097"/>
+							<object class="IBUIImageView" id="434235307">
+								<reference key="NSNextResponder" ref="450302710"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{288, 17}, {17, 17}}</string>
-								<reference key="NSSuperview" ref="992991097"/>
+								<reference key="NSSuperview" ref="450302710"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="47430274"/>
+								<reference key="NSNextKeyView" ref="742741641"/>
 								<int key="IBUIContentMode">1</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<object class="NSCustomResource" key="IBUIImage">
 									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">cat_icon_other@2x.png</string>
+									<string key="NSResourceName">cat_icon_book@2x.png</string>
 								</object>
 							</object>
-							<object class="IBUIButton" id="622122005">
-								<reference key="NSNextResponder" ref="992991097"/>
+							<object class="IBUIButton" id="259745252">
+								<reference key="NSNextResponder" ref="450302710"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{15, 66}, {70, 25}}</string>
-								<reference key="NSSuperview" ref="992991097"/>
+								<string key="NSFrame">{{15, 64}, {70, 25}}</string>
+								<reference key="NSSuperview" ref="450302710"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="673554847"/>
+								<reference key="NSNextKeyView" ref="568141780"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
@@ -167,12 +183,13 @@
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
-							<object class="IBUILabel" id="673554847">
-								<reference key="NSNextResponder" ref="992991097"/>
+							<object class="IBUILabel" id="568141780">
+								<reference key="NSNextResponder" ref="450302710"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{15, 66}, {70, 25}}</string>
-								<reference key="NSSuperview" ref="992991097"/>
+								<string key="NSFrame">{{15, 64}, {70, 25}}</string>
+								<reference key="NSSuperview" ref="450302710"/>
 								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="33649641"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<int key="IBUIContentMode">7</int>
@@ -202,13 +219,14 @@
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
-							<object class="IBUILabel" id="1036459055">
-								<reference key="NSNextResponder" ref="992991097"/>
+							<object class="IBUILabel" id="33649641">
+								<reference key="NSNextResponder" ref="450302710"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{93, 74}, {13, 10}}</string>
-								<reference key="NSSuperview" ref="992991097"/>
+								<string key="NSFrame">{{93, 72}, {13, 10}}</string>
+								<reference key="NSSuperview" ref="450302710"/>
 								<reference key="NSWindow"/>
-								<reference key="IBUIBackgroundColor" ref="484526791"/>
+								<reference key="NSNextKeyView" ref="156705670"/>
+								<reference key="IBUIBackgroundColor" ref="202863586"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<int key="IBUIContentMode">4</int>
@@ -235,12 +253,27 @@
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
+							<object class="IBUIImageView" id="156705670">
+								<reference key="NSNextResponder" ref="450302710"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{109, 72}, {44, 13}}</string>
+								<reference key="NSSuperview" ref="450302710"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="177378919"/>
+								<int key="IBUIContentMode">1</int>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<object class="NSCustomResource" key="IBUIImage">
+									<string key="NSClassName">NSImage</string>
+									<string key="NSResourceName">logo_amazon@2x.png</string>
+								</object>
+							</object>
 						</object>
 						<string key="NSFrameSize">{320, 416}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="1066950092"/>
-						<reference key="IBUIBackgroundColor" ref="484526791"/>
+						<reference key="NSNextKeyView" ref="593377226"/>
+						<reference key="IBUIBackgroundColor" ref="202863586"/>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<bool key="IBUIMultipleTouchEnabled">YES</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -250,7 +283,7 @@
 				<string key="NSFrame">{{0, 64}, {320, 416}}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="992991097"/>
+				<reference key="NSNextKeyView" ref="450302710"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MQA</bytes>
@@ -281,9 +314,17 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">descriptionLabel</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="742741641"/>
+					</object>
+					<int key="connectionID">8</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">scrollView</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="992991097"/>
+						<reference key="destination" ref="450302710"/>
 					</object>
 					<int key="connectionID">9</int>
 				</object>
@@ -291,17 +332,34 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">titleLabel</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="1066950092"/>
+						<reference key="destination" ref="593377226"/>
 					</object>
 					<int key="connectionID">10</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">descriptionLabel</string>
+						<string key="label">mainActionButton</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="47430274"/>
+						<reference key="destination" ref="259745252"/>
 					</object>
-					<int key="connectionID">14</int>
+					<int key="connectionID">13</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">mainActionLabel</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="568141780"/>
+					</object>
+					<int key="connectionID">15</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">mainActionButtonPressed:</string>
+						<reference key="source" ref="259745252"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">21</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -320,7 +378,7 @@
 						<reference key="object" ref="191373211"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="992991097"/>
+							<reference ref="450302710"/>
 						</object>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -336,54 +394,67 @@
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">5</int>
-						<reference key="object" ref="992991097"/>
+						<int key="objectID">4</int>
+						<reference key="object" ref="450302710"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="1066950092"/>
-							<reference ref="892193594"/>
-							<reference ref="47430274"/>
-							<reference ref="622122005"/>
-							<reference ref="673554847"/>
-							<reference ref="1036459055"/>
+							<reference ref="593377226"/>
+							<reference ref="434235307"/>
+							<reference ref="742741641"/>
+							<reference ref="259745252"/>
+							<reference ref="568141780"/>
+							<reference ref="33649641"/>
+							<reference ref="156705670"/>
+							<reference ref="177378919"/>
 						</object>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">8</int>
-						<reference key="object" ref="1066950092"/>
-						<reference key="parent" ref="992991097"/>
+						<int key="objectID">7</int>
+						<reference key="object" ref="593377226"/>
+						<reference key="parent" ref="450302710"/>
 						<string key="objectName">Title Label</string>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">11</int>
-						<reference key="object" ref="892193594"/>
-						<reference key="parent" ref="992991097"/>
+						<int key="objectID">6</int>
+						<reference key="object" ref="434235307"/>
+						<reference key="parent" ref="450302710"/>
 						<string key="objectName">Category Image</string>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">13</int>
-						<reference key="object" ref="47430274"/>
-						<reference key="parent" ref="992991097"/>
+						<int key="objectID">5</int>
+						<reference key="object" ref="742741641"/>
+						<reference key="parent" ref="450302710"/>
 						<string key="objectName">Description Label</string>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">15</int>
-						<reference key="object" ref="622122005"/>
-						<reference key="parent" ref="992991097"/>
+						<int key="objectID">11</int>
+						<reference key="object" ref="568141780"/>
+						<reference key="parent" ref="450302710"/>
+						<string key="objectName">Main Action Label</string>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">12</int>
+						<reference key="object" ref="259745252"/>
+						<reference key="parent" ref="450302710"/>
 						<string key="objectName">Main Action Button</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">16</int>
-						<reference key="object" ref="673554847"/>
-						<reference key="parent" ref="992991097"/>
-						<string key="objectName">Main Action Label</string>
+						<reference key="object" ref="33649641"/>
+						<reference key="parent" ref="450302710"/>
+						<string key="objectName">on</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">17</int>
-						<reference key="object" ref="1036459055"/>
-						<reference key="parent" ref="992991097"/>
-						<string key="objectName">on</string>
+						<reference key="object" ref="156705670"/>
+						<reference key="parent" ref="450302710"/>
+						<string key="objectName">Amazon Logo</string>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">20</int>
+						<reference key="object" ref="177378919"/>
+						<reference key="parent" ref="450302710"/>
 					</object>
 				</object>
 			</object>
@@ -398,16 +469,18 @@
 					<string>1.IBPluginDependency</string>
 					<string>1.IBUserGuides</string>
 					<string>11.IBPluginDependency</string>
-					<string>13.IBPluginDependency</string>
-					<string>15.IBPluginDependency</string>
+					<string>12.IBPluginDependency</string>
 					<string>16.IBPluginDependency</string>
 					<string>17.IBPluginDependency</string>
+					<string>20.IBPluginDependency</string>
+					<string>4.IBPluginDependency</string>
 					<string>5.IBPluginDependency</string>
-					<string>8.IBPluginDependency</string>
+					<string>6.IBPluginDependency</string>
+					<string>7.IBPluginDependency</string>
 				</object>
 				<object class="NSMutableArray" key="dict.values">
 					<bool key="EncodedWithXMLCoder">YES</bool>
-					<string>EntityDetailViewController</string>
+					<string>BookDetailViewController</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>UIResponder</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -424,17 +497,9 @@
 							<double key="location">305</double>
 							<int key="affinity">0</int>
 						</object>
-						<object class="IBUserGuide">
-							<reference key="view" ref="191373211"/>
-							<double key="location">10</double>
-							<int key="affinity">1</int>
-						</object>
-						<object class="IBUserGuide">
-							<reference key="view" ref="191373211"/>
-							<double key="location">38</double>
-							<int key="affinity">1</int>
-						</object>
 					</object>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -456,11 +521,30 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">17</int>
+			<int key="maxID">21</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<bool key="EncodedWithXMLCoder">YES</bool>
+				<object class="IBPartialClassDescription">
+					<string key="className">BookDetailViewController</string>
+					<string key="superclassName">EntityDetailViewController</string>
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">mainActionButtonPressed:</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<string key="NS.key.0">mainActionButtonPressed:</string>
+						<object class="IBActionInfo" key="NS.object.0">
+							<string key="name">mainActionButtonPressed:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/BookDetailViewController.h</string>
+					</object>
+				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">EntityDetailViewController</string>
 					<string key="superclassName">UIViewController</string>
@@ -536,12 +620,16 @@
 			<bool key="EncodedWithXMLCoder">YES</bool>
 			<object class="NSArray" key="dict.sortedKeys">
 				<bool key="EncodedWithXMLCoder">YES</bool>
-				<string>cat_icon_other@2x.png</string>
+				<string>book_detail_fillter@2x.png</string>
+				<string>cat_icon_book@2x.png</string>
+				<string>logo_amazon@2x.png</string>
 				<string>main_action_button_bg@2x.png</string>
 			</object>
 			<object class="NSMutableArray" key="dict.values">
 				<bool key="EncodedWithXMLCoder">YES</bool>
-				<string>{30, 30}</string>
+				<string>{640, 738}</string>
+				<string>{36, 30}</string>
+				<string>{85, 26}</string>
 				<string>{11, 50}</string>
 			</object>
 		</object>
